filled in main and concat

--- a/README
+++ b/README
@@ -1,7 +1,14 @@
 /* README
 *  Readme for catstring:
+*       This is an example from Kochah, Stephan, "Programming in C, 3rd ed.",
+*  Sams Publishing. p. 202.
 *
 *  Programmer: Mark Crapser
+*
+*  07/16/2022
+*       Got stubbs written down. Filled in stubs.
+*
+*
 *
 *
 */
